[gd_scene load_steps=2 format=3 uid="uid://cxbw5kdxvgxlo"]

[ext_resource type="Script" path="res://UI/color_selector.gd" id="1_tcuiq"]

[node name="ColorSelector" type="Panel"]
offset_right = 232.0
offset_bottom = 380.0
size_flags_horizontal = 0
script = ExtResource("1_tcuiq")
metadata/_edit_lock_ = true

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 1
offset_left = 6.0
offset_top = 113.0
offset_right = 228.0
offset_bottom = 275.0
mouse_filter = 0
mouse_force_pass_scroll_events = false
edit_alpha = false
picker_shape = 4
sampler_visible = false
color_modes_visible = false
presets_visible = false

[node name="Swatches" type="GridContainer" parent="ColorPicker"]
layout_mode = 2
columns = 6
metadata/_edit_group_ = true

[node name="PartGroupSelector" type="ItemList" parent="."]
clip_contents = false
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 113.0
offset_bottom = 105.0
allow_reselect = true
allow_rmb_select = true
auto_height = true
item_count = 3
item_0/text = "Mask"
item_1/text = "Body"
item_2/text = "Feet"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="PartSelectorMask" type="Control" parent="PartGroupSelector"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 46.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 2

[node name="PartSelectorBody" type="ItemList" parent="PartGroupSelector"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 104.0
grow_horizontal = 0
grow_vertical = 2
select_mode = 1
allow_rmb_select = true
auto_height = true
item_count = 3
item_0/text = "Torso"
item_1/text = "Right Arm"
item_2/text = "Left Arm"

[node name="PartSelectorFeet" type="ItemList" parent="PartGroupSelector"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 104.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 2
select_mode = 1
allow_rmb_select = true
auto_height = true
item_count = 2
item_0/text = "Right Foot"
item_1/text = "Left Foot"

[connection signal="color_changed" from="ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="item_selected" from="PartGroupSelector" to="." method="_on_part_group_selector_item_selected"]
[connection signal="multi_selected" from="PartGroupSelector/PartSelectorBody" to="." method="_on_part_selector_multi_selected"]
[connection signal="multi_selected" from="PartGroupSelector/PartSelectorFeet" to="." method="_on_part_selector_multi_selected"]
